test/domains/compilerErrors/notsupportedMakeBuffer-ok.chpl
use notsupportedCommon;

//dfltRectangularBase.makeIndexBuffer(5);
//dfltAssociativeBase.makeIndexBuffer(5);
//DistributedBase.makeIndexBuffer(5);
//dfltRectangularSubdomain.makeIndexBuffer(5);
//dfltAssociativeSubdomain.makeIndexBuffer(5);
//DistributedSubdomain.makeIndexBuffer(5);
dfltRectangularSparseSub.makeIndexBuffer(5);
//dfltAssociativeSparseSub.makeIndexBuffer(5);
DistributedSparseSub.makeIndexBuffer(5);
